--- a/package.json
+++ b/package.json
@@ -7,18 +7,31 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "compression": "^1.6.2",
     "cookie-parser": "^1.3.3",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
+    "helmet": "^2.1.2",
     "morgan": "^1.6.1",
+    "multer": "^1.1.0",
+    "node-uuid": "^1.4.7",
     "serve-favicon": "^2.3.0",
     "uncss": "^0.14.1"
   },
   "devDependencies": {
+    "cssnano": "^3.7.3",
     "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.2",
+    "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.0",
-    "gulp-plumber": "^1.0.0"
+    "gulp-nodemon": "^2.0.2",
+    "gulp-plumber": "^1.0.0",
+    "gulp-postcss": "^6.1.1",
+    "gulp-uglify": "^2.0.0",
+    "milligram": "^1.1.0",
+    "normalize.css": "^4.2.0",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-reporter": "^1.4.1",
+    "whatwg-fetch": "^1.0.0"
   }
 }
