--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "helmet": "^3.12.0",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "node-uuid": "^1.4.8",
     "serve-favicon": "^2.5.0",
     "uncss": "^0.16.2"
   },
@@ -24,12 +23,10 @@
     "cheerio": "^0.22.0",
     "clipboard": "^2.0.4",
     "cssnano": "^4.1.10",
-    "es6-promise": "^4.2.4",
     "gulp": "^4.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-livereload": "^4.0.1",
     "gulp-nodemon": "^2.2.1",
-    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-uglify": "^3.0.0",
     "milligram": "^1.3.0",
@@ -37,7 +34,7 @@
     "normalize.css": "^8.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-reporter": "^6.0.1",
-    "supertest": "^4.0.2",
-    "whatwg-fetch": "^3.0.0"
+    "readable-stream": "^3.3.0",
+    "supertest": "^4.0.2"
   }
 }
