--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "clipboard": "^2.0.4",
-    "express": "^4.16.3",
-    "helmet": "^3.12.0",
+    "micro": "^9.3.4",
     "milligram": "^1.3.0",
-    "multer": "^1.3.0",
     "nodent": "^3.2.11",
     "normalize.css": "^8.0.0",
     "regenerator": "^0.14.1",
