--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "now"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "clipboard": "^2.0.4",
     "micro": "^9.3.4",
     "milligram": "^1.3.0",
