--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "private": true,
   "scripts": {
     "dev": "now dev",
-    "now-dev": "parcel serve index.html --port $PORT",
-    "now-build": "parcel build index.html",
+    "now-dev": "next",
+    "now-build": "next build",
     "deploy": "now"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
     "micro": "^9.3.4",
     "milligram": "^1.3.0",
+    "next": "^8.1.0",
     "nodent": "^3.2.11",
     "normalize.css": "^8.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "regenerator": "^0.14.1",
-    "regenerator-runtime": "^0.13.2",
     "serialize-error": "^4.1.0",
     "uncss": "^0.16.2"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.3"
+    "prettier": "1.17.1"
   }
 }
