--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "now"
   },
   "dependencies": {
+    "@sentry/node": "5.3.0",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
