--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "now dev",
     "now-build": "next build",
     "build": "next build",
-    "deploy": "now"
+    "deploy": "now",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@sentry/browser": "^5.3.0",
@@ -14,6 +16,7 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
+    "isomorphic-fetch": "^2.2.1",
     "micro": "^9.3.4",
     "milligram": "^1.3.0",
     "next": "^8.1.0",
@@ -26,6 +29,8 @@
     "uncss": "^0.16.2"
   },
   "devDependencies": {
-    "prettier": "1.17.1"
+    "cypress": "^3.3.1",
+    "prettier": "1.17.1",
+    "webpack": "^4.34.0"
   }
 }
