--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "uncss-online",
   "version": "0.2.0",
+  "engines": {
+    "node": "8.x.x || 10.x.x"
+  },
   "private": true,
   "scripts": {
     "dev": "now dev",
@@ -12,14 +15,13 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.3.0",
-    "@sentry/node": "5.4.0",
+    "@sentry/node": "5.5.0",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
     "clipboard": "^2.0.4",
     "isomorphic-fetch": "^2.2.1",
-    "micro": "^9.3.4",
     "milligram": "^1.3.0",
-    "next": "^8.1.0",
+    "next": "^9.0.0",
     "nodent": "^3.2.11",
     "normalize.css": "^8.0.0",
     "react": "^16.8.6",
