Minify CSS using cssnano

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "uncss": "^0.16.2"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "cypress": "^3.3.1",
     "prettier": "1.18.2",
     "webpack": "^4.34.0"
