--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "uncss": "^0.16.2"
   },
   "devDependencies": {
+    "@types/clipboard": "^2.0.1",
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/node": "^12.6.2",
+    "@types/react": "^16.8.23",
     "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
     "cypress": "^3.3.1",
     "postcss-nested": "^4.1.2",
     "prettier": "1.18.2",
+    "typescript": "^3.5.3",
     "webpack": "^4.35.3"
   }
 }
