--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "dev": "now dev",
+    "now-dev": "now dev",
     "now-build": "next build",
     "build": "next build",
     "deploy": "now",
@@ -21,7 +21,7 @@
     "clipboard": "^2.0.4",
     "isomorphic-fetch": "^2.2.1",
     "milligram": "^1.3.0",
-    "next": "^9.0.1",
+    "next": "^9.0.2",
     "normalize.css": "^8.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@types/clipboard": "^2.0.1",
     "@types/isomorphic-fetch": "^0.0.35",
-    "@types/node": "^12.6.2",
+    "@types/node": "^12.6.6",
     "@types/react": "^16.8.23",
     "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
