--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "next build",
     "deploy": "now",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "test:tsc": "tsc --noEmit",
+    "test": "yarn test:tsc && start-server-and-test now-dev http://localhost:3000 cypress:run"
   },
   "dependencies": {
     "@sentry/browser": "^5.11.0",
@@ -37,6 +39,7 @@
     "cypress": "^3.8.2",
     "postcss-nested": "^4.2.1",
     "prettier": "1.19.1",
+    "start-server-and-test": "^1.10.6",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5"
   }
