--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
     "test": "yarn test:tsc && start-server-and-test now-dev http://localhost:3000 cypress:run"
   },
   "dependencies": {
-    "@sentry/browser": "^5.11.0",
-    "@sentry/node": "5.11.0",
+    "@sentry/browser": "^5.12.1",
+    "@sentry/node": "5.12.1",
     "@zeit/next-css": "^1.0.1",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "clipboard": "^2.0.4",
     "milligram": "^1.3.0",
-    "next": "^9.1.7",
+    "next": "^9.2.1",
     "normalize.css": "^8.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "serialize-error": "^5.0.0",
-    "uncss": "^0.16.2"
+    "uncss": "0.16.2"
   },
   "devDependencies": {
     "@types/clipboard": "^2.0.1",
     "@types/isomorphic-fetch": "^0.0.35",
-    "@types/node": "^13.1.6",
-    "@types/react": "^16.9.17",
-    "autoprefixer": "^9.7.3",
+    "@types/node": "^13.7.0",
+    "@types/react": "^16.9.19",
+    "autoprefixer": "^9.7.4",
     "cssnano": "^4.1.10",
-    "cypress": "^3.8.2",
+    "cypress": "^3.8.3",
     "postcss-nested": "^4.2.1",
     "prettier": "1.19.1",
-    "start-server-and-test": "^1.10.6",
-    "typescript": "^3.7.4",
+    "start-server-and-test": "^1.10.8",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5"
   }
 }
