--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uncss-online",
   "version": "0.2.0",
   "engines": {
-    "node": "12.x.x"
+    "node": "12.x.x || 14.x.x"
   },
   "private": true,
   "scripts": {
@@ -17,7 +17,6 @@
     "test": "yarn test:tsc && yarn build && start-server-and-test start http://localhost:3000 cypress:run"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
     "axios": "^0.21.1",
     "clipboard": "^2.0.6",
     "milligram": "1.4.1",
