--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "uncss-online",
   "version": "0.2.0",
   "private": true,
+  "engines": {
+    "node": ">=12"
+  },
   "scripts": {
     "now-dev": "now dev",
     "now-build": "next build",
@@ -14,27 +17,24 @@
     "test": "yarn test:tsc && yarn build && start-server-and-test start http://localhost:3000 cypress:run"
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^0.23.0",
     "clipboard": "^2.0.8",
     "milligram": "1.4.1",
     "next": "^11.1.2",
     "normalize.css": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "serialize-error": "^7.0.1",
     "uncss": "0.16.2"
   },
   "devDependencies": {
-    "@types/clipboard": "^2.0.7",
     "@types/node": "^16.6.1",
-    "@types/react": "^17.0.20",
-    "autoprefixer": "^9.8.8",
-    "cssnano": "^4.1.11",
+    "@types/react": "^17.0.29",
+    "autoprefixer": "^10.3.7",
+    "cssnano": "^5.0.8",
     "cypress": "^8.6.0",
-    "postcss-nested": "^4.2.3",
+    "postcss-nested": "^5.0.6",
     "prettier": "2.4.1",
     "start-server-and-test": "^1.14.0",
-    "typescript": "^4.4.4",
-    "webpack": "^4.46.0"
+    "typescript": "^4.4.4"
   }
 }
