--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^0.27.2",
     "clipboard": "^2.0.11",
     "milligram": "1.4.1",
-    "next": "^13.5.0",
+    "next": "14.0.2",
     "normalize.css": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
     "cypress": "^10.3.0",
+    "postcss": "8.x.x",
     "postcss-nested": "^5.0.6",
     "prettier": "2.7.1",
     "start-server-and-test": "^1.14.0",
